Assignment 1 Python
Welcome to the Jupyter notebook!
This cell is a markdown cell, which means it contains text.
In [1]:

#This cell is a code cell.  Pressing shift-enter or using the "Run Cell" button will evaluate the code in this cell.
#The "Run Cell" button looks like a little black triangle.
#Run the code in this cell.
​
print("hello world")
hello world
In [2]:

#create a variable named a, and store the value 3+1 in it
a = 3+1
​
#display a
print(a)
4
In [3]:

#you can combine multiple objects in the same print statement
​
print("three plus one is", a)
('three plus one is', 4)
Change the cell below to output your first and last names.
In [9]:

#Note that the usual Python convention is to separate words in variable names using underscores
​
first_name = "Halee"
last_name = "Mason"
print(first_name,last_name)
('Halee', 'Mason')
In [10]:

#We can use the tab or "\t" and newline or "\n" characters to format our output.
#Adjust the output below so that your first and last name appear in the appropriate column.
​
print("Halee","\t","Mason","\n",first_name,"\t",last_name)
('Halee', '\t', 'Mason', '\n', 'Halee', '\t', 'Mason')
In [11]:

#We can also combine strings using the + operator.
#Adjust the output below so that it includes a space between your first and last name.
print(first_name+last_name)
HaleeMason
You can see a list of all of the functions associated to an object by typing the object's name followed by a period, then hitting tab.
In [12]:

#Find a function that will convert your given name to uppercase.
first_name.
  File "<ipython-input-12-a6867a0530f3>", line 2
    first_name.
               ^
SyntaxError: invalid syntax


In [24]:

​
str.capitalize("halee mason")
​
Out[24]:
'Halee mason'

​
In [25]:

"MyAwesomeString".title()
Out[25]:
'Myawesomestring'
In [26]:

myname = 'halee mason'
myname.upper()
Out[26]:
'HALEE MASON'
